--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ pydantic = {extras = ["email"], version = "^2.9.0"}
 pydantic-settings = "^2.3.4"
 alembic = "^1.13.2"
 sqlalchemy = "^2.0.34"
+pyjwt = "^2.9.0"
+pwdlib = {extras = ["argon2"], version = "^0.2.1"}
+python-multipart = "^0.0.9"
 
 
 [tool.poetry.group.dev.dependencies]
